Hopefully corrected the switch to the new Process infrastructure