@@ -258,6 +258,16 @@ public class Common
 		return retMe ;
 	}
 
+	public String arrayToString( final String[] stringArray )
+	{
+		String retMe = "" ;
+		for( String theString : stringArray )
+		{
+			retMe += theString + " " ;
+		}
+		return retMe ;
+	}
+	
 	/**
 	 * Execute the given command.
 	 * Return true if successful, false otherwise.
@@ -268,6 +278,7 @@ public class Common
 	public boolean executeCommand( ImmutableList.Builder< String > theCommand )
 	{
 		log.info( "theCommand: " + theCommand.build().toString() ) ;
+		log.info( "theCommand: " + arrayToString( theCommand.build().toArray( new String[ 1 ] ) ) ) ;
 		boolean retMe = true ;
 
 		// Only execute the command if we are NOT in test mode
@@ -276,8 +287,9 @@ public class Common
 			try
 			{
 				Thread.currentThread().setPriority( Thread.MIN_PRIORITY ) ;
-				final Process process = Runtime.getRuntime().exec( theCommand.build().toArray( new String[ 1 ] ) ) ;
-
+				final ProcessBuilder theProcessBuilder = new ProcessBuilder( toStringForCommandExecution( theCommand.build() ) ) ;
+				final Process process = theProcessBuilder.start() ;
+				
 				BufferedReader inputStreamReader = process.inputReader() ;
 				BufferedReader errorStreamReader =  process.errorReader() ;
 
@@ -864,6 +876,41 @@ public class Common
 		return fileExists ;
 	}
 
+	public String[] toStringArrayForCommandExecution( final ImmutableList< String > theList )
+	{
+		String[] retMe = new String[ theList.size() ] ;
+
+		int outputListIndex = 0 ;
+		for( Iterator< String > listIterator = theList.iterator() ; listIterator.hasNext() ; )
+		{
+			// Any file names with spaces must be encapsulated in double quotes, except for those
+			// items that already start with "
+			String outputToken = "" ;
+			String iteratorString = listIterator.next() ;
+			if( iteratorString.contains( " " ) && !iteratorString.startsWith( "\"" ) && !iteratorString.endsWith( "\"" ) )
+			{
+				outputToken += "\"" ;
+			}
+			outputToken += iteratorString ;
+
+			// Any file names with spaces must be encapsulated in double quotes, except for those
+			// items that already start with "
+			if( iteratorString.contains( " " ) && !iteratorString.startsWith( "\"" ) && !iteratorString.endsWith( "\"" ) )
+			{
+				outputToken += "\"" ;
+			}
+
+//			if( listIterator.hasNext() )
+//			{
+//				// At least one more item remaining, add a space
+//				retMe += " " ;
+//			}
+			
+			retMe[ outputListIndex++ ] = outputToken ;
+		}
+		return retMe ;
+	}
+	
 	public String toStringForCommandExecution( final ImmutableList< String > theList )
 	{
 		String retMe = "" ;
